// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package metadata;

option go_package = "sge-monorepo/tools/vendor_bender/protos/manifestpb";

message Manifest {
  repeated ManifestEntry manifest_entry = 1;
}

message ManifestEntry {
  string name = 1;
  bool set_as_local_repository = 2;
  repeated string foreign_file = 3;

  // Contains additional information for third-party package.
  oneof source {
    GitSrc git_src = 4;
    GoSrc go_src = 5;
    ZipSrc zip_src = 6;
    RustSrc rust_src = 7;
  };
}

message GitSrc {
  // URL of the git repository.
  string url = 1;

  // Tag or branch to be used, mostly informational
  string ref = 2;

  // Commit sha1, this mandatory
  string commit = 3;
}

message GoSrc {
  // Import path of go package.
  string import_path = 1;

  // Version of go package. setting it to latest will show an error with the corresponding version
  string version = 2;

  // Ignore gazelle update.
  bool ignore_gazelle = 3;
}

message ZipSrc {
  // URL of the zip package.
  string url = 1;

  // Version of the zip package.
  string version = 2;
}

message RustSrc {
  // can be a simple string in the form "x.y.z" or a full cargo spec with { x = ... }
  string version_spec = 1;
}
